@@ -79,3 +79,4 @@
 
 2023-XX-XX: 2.1.8 (TBD):
 - Fix read of stored startup value of boost mode
+- Make sure that ID.3 mode also works for state changes that go from C directly to A
